--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,7 @@ runtime: php
 env: flex
 
 runtime_config:
+  operating_system: "ubuntu22"
   document_root: public
 
 # Ensure we skip ".env", which is only for local development
